[project]
name = "yesterday-cli" # TODO: change the name of the package
version = "0.1.0"
description = "`yesterday` is a tiny Python CLI tool that tells you what day was yesterday. Nothing more. Nothing less."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []
authors = [{ name = "Ilya Khrustalev", email = "ilya.khrustalev@gmail.com" }] # TODO: change the author name and email

[project.scripts]
yesterday = "yesterday_cli.main:cli"

[build-system]
requires = ["setuptools", "setuptools_scm[toml]"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["yesterday_cli"]
exclude = [".venv", "tests/*", "*/tests/*"]
